gitops/02-apps/main/qwen-serving/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qwen-serving
  namespace: private-assistant
spec:
  ports:
    - port: 4000
      targetPort: 4000
      name: http
  selector:
    app: qwen-serving-router
---
apiVersion: v1
kind: Service
metadata:
  name: qwen-serving-worker
  namespace: private-assistant
spec:
  ports:
    - port: 8000
      targetPort: 8000
      name: http
  selector:
    app: qwen-serving
